2007-08-24  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #468411

	* gui/e-week-view.c: (e_week_view_on_text_item_event): Grab focus to
	main view, so that the even gets created.

2007-08-24  Johnny Jacob  <jjohnny@novell.com>	

	** Fix for bug #466796
	
	* gui/calendar-config.c :  adds calendar_config_init() to the beginning of every function
	that uses the 'config' variable.

	Committing on behalf of Rouslan Solomakhin
	<rouslan@solomakhin.net>
	
2007-08-24  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #330628

	* gui/e-day-view-top-item.c: (e_day_view_top_item_draw_long_event):
	Show meeting icon.

2007-08-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #385517

	* gui/dialogs/cal-prefs-dialog.c: (show_task_list_config):
	Use actual state to sensitive tasks_hide_completed_* widgets.

2007-08-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #329746

	* gui/dialogs/comp-editor.c: (make_icon_from_comp):
	Return proper icon for memo components.
	* gui/dialogs/delete-comp.c: (delete_component_dialog),
	(prompt_retract_dialog):
	* gui/dialogs/changed-comp.c: (changed_component_dialog):
	* gui/dialogs/comp-editor.c: (make_title_from_comp),
	(make_title_from_string):
	* gui/dialogs/cancel-comp.c: (cancel_component_dialog):
	* gui/dialogs/delete-error.c: (delete_error_dialog):
	* gui/dialogs/recur-comp.c: (recur_component_dialog):
	* gui/itip-utils.c: (comp_subject), (comp_description):
	* calendar.error.xml:
	Renamed 'Journal' to 'Memo'.

2007-08-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #428110

	* gui/memos-component.c: (update_single_object):
	Added parameter to rather fail on adding same object with drag&drop,
	rather than modify and then delete existing one.
	* gui/memos-component.c: (update_objects): Use new parameter above.
	* gui/memos-component.c: (selector_tree_drag_data_received):
	Use result of call 'update_objects' and prevent delete object when
	the call fails.

2007-08-23  Milan Crha  <mcrha@redhat.com>
